# landmark-rs

./: Cargo.toml  README.md
landmark-client/: Cargo.toml
landmark-client/src/: block.rs  camera.rs  color.rs  game_map.rs  input.rs  lib.rs  loader.rs  mesher.rs  model.rs  rendererer.rs  texture.rs  transform.rs
landmark-common/: Cargo.toml
landmark-server/: Cargo.toml
res/blocks/: grass.ron  soil.ron  stone.ron
res/shaders/: shader.wgsl
src/: main.rs  model.rs  rendererer.rs
