[package]
name = "landmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["landmark-client", "landmark-common", "landmark-server"]

[dependencies]
landmark-client = { path = "landmark-client" }
clap = "4.3.21"

[workspace.dependencies]
sparsey = "0.11.0"
env_logger = "0.10.0"
log = "0.4.20"
