[package]
name = "landmark-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
game-loop = { version = "0.10.2", features = ["winit"] }
glam = { version = "0.24.1", features = ["bytemuck"] }
pollster = "0.3.0"
wgpu = "0.17.0"

sparsey = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
