[package]
name = "landmark-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
game-loop = { version = "1.0.0", features = ["winit"] }
glam = { version = "0.25.0", features = ["bytemuck"] }
pollster = "0.3.0"
wgpu = "0.17.0"

shipyard = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
